Changes z-index to fix unclickable issue

--- a/home.css
+++ b/home.css
@@ -39,6 +39,10 @@
   justify-content: space-around;
 }
 
+.icon {
+  z-index: 20;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
